# annulus

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  multi-session.md
docs/plans/: README.md
docs/providers/: codex.md  gemini.md
src/: bridge.rs  config.rs  config_export.rs  lib.rs  main.rs  notify.rs  status.rs  statusline.rs  validate_hooks.rs
src/.rhizome/: workspace-symbols-42d90801bdfe5bba.json
src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs
src/usage/: claude.rs  codex.rs  gemini.rs  mod.rs  storage.rs
tests/: codex_provider.rs  gemini_provider.rs  session_scoped_provider.rs  validate_hooks_streams.rs
tests/fixtures/codex/: README.md  sample-session.jsonl
tests/fixtures/gemini/: README.md  sample-session.json
