[package]
name = "annulus"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Cross-ecosystem operator utilities for the Basidiocarp ecosystem"
license = "MIT"
repository = "https://github.com/basidiocarp/annulus"
keywords = ["basidiocarp", "agents", "statusline", "validation", "cli"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "annulus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
spore = { git = "https://github.com/basidiocarp/spore", rev = "967e10c43a1052c9e57e226227621a83e6ac20e4" }

[target.'cfg(any(windows, target_env = "musl"))'.dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
rusqlite = { version = "0.39" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
