[package]
name = "annulus"
version = "0.7.4"
edition = "2024"
rust-version = "1.85"
authors = ["William Newton"]
description = "Cross-ecosystem operator utilities for the Basidiocarp ecosystem"
license = "MIT"
repository = "https://github.com/basidiocarp/annulus"
keywords = ["basidiocarp", "agents", "statusline", "validation", "cli"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "annulus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
terminal_size = "0.4"
toml = "1"
tracing = "0.1"
which = "7"
spore = { git = "https://github.com/basidiocarp/spore", rev = "85414a54afc16597297f6cd42edec5985474d767" }

[target.'cfg(any(windows, target_env = "musl"))'.dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
rusqlite = { version = "0.39" }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pre-existing pedantic violations to be addressed incrementally.
match_wildcard_for_single_variants = "allow"
